--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             padding: 1rem;
         }
 
-        .conj {
+        .conj,
+        a {
+            color: black;
             font-size: 1.75rem;
             line-height: 150%;
             padding: 0rem;
