--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <!-- <link rel="stylesheet" href="style.css" type="text/css"> -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap');
         body {
             background: black;
         }
         .container {
             max-width: 50rem;
             margin: auto;
-            font-family: "ubuntu mono";
+            font-family: 'Anonymous Pro',"ubuntu mono";
             color: white;
         }
 
