--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             color: white;
         }
         .conj {
-            background: powderblue;
+            background: white;
             padding: 1rem;
         }
         .tense {
