--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <!-- <link rel="stylesheet" href="style.css" type="text/css"> -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap');
         body {
             background: black;
         }
         .container {
             max-width: 50rem;
             margin: auto;
-            font-family: 'Azeret Mono', monospace;
+            font-family: 'Anonymous Pro',"ubuntu mono";
             color: white;
         }
-
         .verb {
             font-weight: bold;
             text-align: center;
@@ -28,8 +28,8 @@
         .conj,
         a {
             color: black;
-            font-size: 1.25rem;
-            line-height: 200%;
+            font-size: 1.5rem;
+            line-height: 150%;
         }
         a {
             color: white;
