--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap');
         body {
             background: black;
         }
         .container {
             max-width: 50rem;
             margin: auto;
-            font-family: 'Anonymous Pro',"ubuntu mono";
+            font-family: 'Source Code Pro',"ubuntu mono";
             color: white;
         }
         .verb {
