--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
     <title>French Verbs</title>
     <!-- <link rel="stylesheet" href="style.css" type="text/css"> -->
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
         body {
             background: black;
         }
         .container {
             max-width: 50rem;
             margin: auto;
-            font-family: 'Source Code Pro',"ubuntu mono";
+            font-family: 'Open Sans', sans-serif;
             color: white;
         }
         .verb {
